--- a/style.css
+++ b/style.css
@@ -1,14 +1,21 @@
-.overall {
-  font-family: sans-serif;
-  text-align: center;
-  background-color: white;
+body {
+font-family: sans-serif;
+font-size: 36px;
+text-align: center;
 }
-#header-title {
-  background-color: coral;
+input {
+font-size: 36px;
 }
-.flex-container {
-  display: flex;
+h1 {
+background-color: coral;
 }
-.flex-container > div {
-  flex: 1;
+ul {
+list-style-type: none;
 }
+li {
+margin: 20px;
+}
+/* #fButton, input[type=checkBox]:checked + label {
+
+text-decoration: line-through;
+} */
