--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ list-style: none;
 li {
   margin: 15px;
 }
-/* input[type=checkbox]:checked + li.strikethrough{
-  text-decoration: line-through;
-} */
+#fButton {
+  border-radius: 50%;
+  background-color: green;
+  margin-left:10px;
+}
+#dButton {
+  background-color: red;
+  margin-left: 10px;
+}
