--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 #header-title {
   background-color: #f0a44d;
   border-radius: 5px;
+  margin-left: 350px;
+  margin-right: 350px;
 }
 .flex-container {
   display: flex;
@@ -22,13 +24,13 @@ li {
   margin: 15px;
 }
 #fButton {
-  border-radius: 50%;
+  border-radius: 5px;
   background-color: green;
-  margin-left:10px;
+  margin-left: 5px;
 }
 #dButton {
   background-color: #c42825;
-  margin-left: 10px;
+  margin-left: 5px;
   border-radius: 5px;
 }
 #universalDelete {
@@ -44,4 +46,9 @@ li {
   border-radius: 5px;
   background-color: #f0a44d;
   padding-bottom: 10px;
+  margin-left: 250px;
+  margin-right: 250px;
+}
+#inputtedChore {
+  size: 650px;
 }
